--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ body {
     gap: 1.2rem;
 }
 
-input {
+.numbers {
     width: 22rem;
     height: 3.4rem;
     padding-left: 0.8rem;
@@ -32,6 +32,9 @@ input {
     border: none;
     border-radius: 0.25rem;
     background:#1E1D25 ;
+
+    font-weight: 400;
+    font-size: 1rem;
     color: #FFF;
 }
 
@@ -77,4 +80,33 @@ span {
     color: #FFF;
     font-size: 1.75rem;
     font-weight: 700;
+}
+
+@media (max-width: 700px) {
+    .up{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .numbers {
+        width: 80%;
+    }
+
+    .up{
+        display: flex;
+    }
+
+    .button{
+        margin-top: 1rem;
+    }
+
+    .calculate {
+        font-size: 2.0rem;
+        margin-top: 0;
+        margin-top: 15px;
+    }
+
+    .clean{
+        margin-top: 2rem;
+    }
 }
